package com.tetras.librarie;

import java.util.Arrays;

public class BulbizarreObscur extends Pokemon {
    public BulbizarreObscur() {
        super(Arrays.asList(Type.Poison));
    }
}
