package com.tetras.librarie;

import java.util.Arrays;

public class FlorizarreObscur extends Pokemon {
    public FlorizarreObscur() {
        super(Arrays.asList(Type.Poison));
    }
}
