package com.tetras.librarie;

import java.util.Arrays;

public class HerbizarreObscur extends Pokemon {
    public HerbizarreObscur() {
        super(Arrays.asList(Type.Poison));
    }
}
