package com.tetras.librarie;

public interface IMegaEvoluable {
    //Pokemon evoluer();

    MegaFlorizare faireunMega();
}