package com.tetras.librarie;

import java.util.Arrays;

public class MegaFlorizare extends Pokemon {

    public MegaFlorizare(){
        super(Arrays.asList(Type.Plante, Type.Poison));
    }
    
}
