package com.tetras.librarie;

public class ObscurDecorator extends PokemonObscurDecorator {

    public ObscurDecorator(Pokemon uPokemon)
    {
        super(uPokemon);
    }
}
